src/objects/Arr__c.object
<CustomObject>
    <fields>
        <fullName>Added__c</fullName>
        <label>Added</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Arr</label>
    <nameField>
        <label>Arr Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arrays</pluralLabel>
    <recordTypes>
        <fullName>MasterRecordType</fullName>
        <active>true</active>
        <label>MasterRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>MySharingReason__c</fullName>
        <label>MySharingReason</label>
    </sharingReasons>
</CustomObject>